<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sheetContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="2dp"
        android:gravity="center"
        android:paddingStart="?attr/listPreferredItemPaddingStart"
        android:paddingEnd="?attr/listPreferredItemPaddingEnd">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:scaleType="fitCenter"
            android:alpha="0.5"
            android:src="@drawable/ic_drag_pill_24"
            app:tint="?attr/colorOnBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bottomContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="48dp">

            <FrameLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="top"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/AppShapeAppearance.SmallComponent"
                    app:strokeColor="@color/stroke_color"
                    app:strokeWidth="1dp"
                    app:srcCompat="@drawable/ic_add_image_24" />

            </FrameLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:hint="@string/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameTextEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapSentences"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/seasonChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/winterChip"
                        style="@style/Widget.App.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/winter"
                        app:chipIcon="@drawable/ic_winter_24"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/springChip"
                        style="@style/Widget.App.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spring"
                        app:chipIcon="@drawable/ic_spring_24"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/summerChip"
                        style="@style/Widget.App.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/summer"
                        app:chipIcon="@drawable/ic_summer_24"
                        app:chipIconEnabled="true" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/fallChip"
                        style="@style/Widget.App.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fall"
                        app:chipIcon="@drawable/ic_fall_24"
                        app:chipIconEnabled="true"/>

                </com.google.android.material.chip.ChipGroup>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/colorChipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/addColorChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_color"
                        app:chipStrokeColor="@color/material_on_surface_stroke"
                        app:chipStrokeWidth="1dp"
                        app:chipBackgroundColor="@android:color/transparent"
                        app:chipIcon="@drawable/ic_add_24"/>

                </com.google.android.material.chip.ChipGroup>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:backgroundTint="@color/button_delete_color"
                android:enabled="false"
                android:text="@string/delete"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>